--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DoctorCare</title>
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -255,7 +255,7 @@
 
         <div class="col-b">
           <img
-            src="/assets/mulher-negra-com-camisa-verde.png"
+            src="./assets/mulher-negra-com-camisa-verde.png"
             alt="Mulher negra vestindo moletom verde e sorrindo"
           />
         </div>
@@ -461,7 +461,7 @@
 
         <div class="col-b">
           <img
-            src="/assets/doutor-feliz-segurando-prancheta-com-pacientes.png"
+            src="./assets/doutor-feliz-segurando-prancheta-com-pacientes.png"
             alt="Doutor feliz segurando prancheta com pacientes."
           />
         </div>
@@ -547,7 +547,7 @@
 
         <div class="col-b">
           <img
-            src="assets/homem-negro-com-camiseta-bege-mechendo-no-celular.png"
+            src="./assets/homem-negro-com-camiseta-bege-mechendo-no-celular.png"
             alt="Homem negro com camiseta bege mechendo no homem-negro-com-camiseta-bege-mechendo-no-celular"
           />
         </div>
@@ -725,6 +725,6 @@
     </a>
 
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
