--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <nav id="navigation" class="">
+    <nav id="navigation" class="scroll">
       <div class="wrapper">
         <a class="logo" href="#home">
           <svg
@@ -698,7 +698,7 @@
         </div>
     </footer>
 
-    <a id="backToTopButton" href="#home">
+    <a id="backToTopButton" class="show" href="#home">
       <svg
         width="40"
         height="40"
